# audio_video_code

./: README.md
lossy-codec/lib/: bitmath.cpp  bitmath.h  utils.cpp  utils.h
lossy-codec/report/: .gitignore  report.tex
lossy-codec/src/: .gitignore  CMakeLists.txt  wavcb.cpp  wavcb.h  wavdec.cpp  wavdec.h  wavenc.cpp  wavenc.h  wavquant.cpp  wavvq.cpp  wavvq.h
lossy-codec/tools/: .gitignore
lossy-codec/tools/wavcmp/: CMakeLists.txt  wavcmp.cpp  wavcmp.h
lossy-codec/tools/wavcp/: CMakeLists.txt  wavcp.cpp
lossy-codec/tools/wavhist/: CMakeLists.txt  wavhist.cpp  wavhist.h
lossy-codec/tools/wavhist/utils/: plot.gp
video-codec/: CMakeLists.txt
video-codec/lib/: bstream.cpp  extmath.cpp  progress.cpp  progress.hh
video-codec/src/: camplayer.cpp  vplayer.cpp  vz.cpp
video-codec/src/coding/: golomb.cpp
video-codec/src/include/coding/: golomb.hh
video-codec/src/include/jpeg-ls/: gradient.hh  matrix.hh  mode.hh  predictor.hh  rle.hh
video-codec/src/include/motion/: blocks.hh  matrix.hh
video-codec/src/include/stages/: stage2.hh  stage3.hh
video-codec/src/include/yuv/: convert.hh  info.hh
video-codec/src/jpeg-ls/: gradient.cpp  matrix.cpp  mode.cpp  predictor.cpp  rle.cpp
video-codec/src/motion/: blocks.cpp  matrix.cpp
video-codec/src/stages/: stage2.cpp  stage3.cpp
video-codec/src/yuv/: convert.cpp  info.cpp
